NL strings, unused (identical) key

--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ja_JP.properties
@@ -8,8 +8,6 @@ ActiveTrainTableTitle = \u64cd\u4f5c\u4e2d\u306e\u5217\u8eca
 RequestedAllocationsTableTitle = \u30c7\u30a3\u30b9\u30d1\u30c3\u30c1\u3055\u308c\u308b\u305f\u3081\u306b\u5272\u308a\u5f53\u3066\u304c\u8981\u6c42\u3055\u308c\u3066\u3044\u307e\u3059
 InitiateTrain = \u65b0\u898f\u306e\u5217\u8eca
 InitiateTrainButtonHint = \u65b0\u898f\u5217\u8eca\u3092\u904b\u884c\u3059\u308b\u305f\u3081\u306e\u30a6\u30a4\u30f3\u30c9\u30a6\u3092\u958b\u304d\u307e\u3059\u3002.
-ShowAllocated = \u5272\u308a\u5f53\u3066\u3092\u8868\u793a
-ShowAllocatedButtonHint = \u73fe\u5728\u5272\u308a\u5f53\u3066\u3089\u308c\u3066\u3044\u308b\u30bb\u30af\u30b7\u30e7\u30f3\u3092\u3059\u3079\u3066\u8868\u793a\u3059\u308b\u30a6\u30a4\u30f3\u30c9\u30a6\u3092\u958b\u304d\u307e\u3059\u3002.
 AllocateExtra = \u5225\u67a0\u5272\u308a\u5f53\u3066
 AllocateExtraButtonHint = Press to bring up a window allowing allocation of an extra Section to an Active Train.
 TerminateTrain = \u5217\u8eca\u3092\u7d42\u4e86
@@ -20,7 +18,6 @@ TerminateTrainTitle = \u5217\u8eca\u904b\u884c\u505c\u6b62
 TransitColumnTitle = \u904b\u884c
 TrainColumnTitle = \u5217\u8eca
 StatusColumnTitle = \u72b6\u614b
-ModeColumnTitle = \u30e2\u30fc\u30c9
 AllocatedSectionColumnTitle = \u5272\u308a\u5f53\u3066\u3089\u308c\u305f\u30bb\u30af\u30b7\u30e7\u30f3
 NextSectionColumnTitle = \u65b0\u898f\u30bb\u30af\u30b7\u30e7\u30f3
 AllocateButtonName = \u6b21\u3092\u5272\u308a\u5f53\u3066
@@ -35,7 +32,7 @@ AllocateButton = \u5272\u308a\u5f53\u3066
 AllocateButtonHint = Click to allocate selected section to active train.
 SectionColumnTitle = Requested Section
 TrainStatusColumnTitle = Train Status
-TrainModeColumnTitle = Mode
+TrainModeColumnTitle = \u30e2\u30fc\u30c9
 OccupancyColumnTitle = Occupancy
 AllocatedSectionsTitle = Allocated Sections
 ReleaseButton = Release
