--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -5,7 +5,7 @@
 
 TitleDispatcher  = Verkeersleider
 ActiveTrainTableTitle = Actieve Treinen
-RequestedAllocationsTableTitle = Aanvragen in wachtrij
+RequestedAllocationsTableTitle = Aanvragen in de Wachtrij
 InitiateTrain = Nieuwe Trein
 InitiateTrainButtonHint = Klik om een nieuwe Trein aan te maken.
 AllocateExtra = Wijs Extra toe
@@ -21,7 +21,6 @@ CancelRestartTitle = Annuleer Auto-herstart
 
 TransitColumnTitle = Traject
 TrainColumnTitle = Trein
-ModeColumnTitle = Modus
 NextSectionColumnTitle = Volgend Baanvak
 AllocateButtonName = Wijs volgende toe
 
@@ -119,7 +118,8 @@ NumberOfBlocks = Aantal Baanvakken
 AsFarAsPos = Zo ver mogelijk
 ToSafeSections = Tot veilig Baanvak
 UseSpeedProfileLabel = Pas Snelheidsprofiel toe
-UseSpeedProfileHint = Alleen beschikbaar voor een Lok met Snelheidsprofiel
+UseSpeedProfileHint = Alleen beschikbaar bij een Lok met Snelheidsprofiel
+StopBySpeedProfileLabel = Stop volgens Snelheidsprofiel
 StopBySpeedProfileAdjustLabel = Correctie:
 StopBySpeedProfileAdjustHint = Alleen als Stoppen Volgens Profiel 1500 normaal is; hogere waarden stoppen sneller.
 AllocateAllTheWay = Wijs zo ver als mogelijk toe aan Trein
