--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
@@ -21,7 +21,6 @@ CancelRestartTitle = Annuler Red\u00e9marrage Auto
 
 TransitColumnTitle = Transit
 TrainColumnTitle = Train
-ModeColumnTitle = Mode
 NextSectionColumnTitle = Section suivante
 AllocateButtonName = Allocation Suivante
 
@@ -138,7 +137,7 @@ SaveButton=Sauv Info Train ...
 SaveButtonHint = Cliquez pour enregistrer les informations de train montr\u00e9 ci-dessous (en option).
 DeleteButton = Supp ...
 DeleteButtonHint = Cliquez pour supprimer un fichier d'information sur le train pr\u00e9c\u00e9demment enregistr\u00e9.
-None = <aucun>
+
 LoadTrainChoice = Veuillez s\u00e9lectionner un fichier Info de train \u00e0 charger, ou Annuler.
 LoadTrainTitle = Charge Infos Train
 DeleteTrainChoice = Veuillez s\u00e9lectionner un fichier Info de train de supprimer, ou Annuler.
@@ -171,7 +170,7 @@ STOPPED = ARR\u00caT\u00c9
 DONE = TERMIN\u00c9
 START = D\u00c9MARRAGE
 AUTOMATIC = AUTOMATIQUE
-MANUEL = MANUEL
+MANUAL = MANUEL
 DISPATCHED = EXP\u00c9DI\u00c9S
 FORWARD = AVANT
 REVERSE = INVERSE
@@ -276,8 +275,6 @@ Error33 = Exploitation automatique requise, mais aucun panneau \u00c9diteur de R
 Error34 = "{0}" erreurs constat\u00e9es lors de la v\u00e9rification de la connectivit\u00e9 des Sections\ndans ce Transit. V\u00e9rifiez le journal des messages pour plus de d\u00e9tails.
 Error35 = Exploitation automatique requise, mais la d\u00e9tection d'occupation\nRn'est pas sp\u00e9cifi\u00e9e dans la fen\u00eatre Options. S'il vous pla\u00eet essayer de nouveau.
 Error36 = "{0}" erreurs constat\u00e9es lors de la v\u00e9rification/r\u00e9glage des capteurs de direction dans\nla logique signal pour ce Transit. V\u00e9rifiez le journal des messages pour plus de d\u00e9tails.
-Error37 = La Vitesse maximale "{0}" n'est pas dans la plage autoris\u00e9e\nde 0,1 \u00e0 1,0. S'il vous pla\u00eet essayer de nouveau.
-Error38 = Mauvaise entr\u00e9e"{0}" en vitesse maximale. S'il vous pla\u00eet essayer de nouveau.
 Error39 = AllocationAuto reqi\u00e8re un panneau \u00c9diteur de R\u00e9seau et essayez \u00e0 nouveau.
 
 SupportVSDecoder = Support de positionnement pour le d\u00e9codeur sonore virtuel 
