consistent NL spelling

--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -81,8 +81,8 @@ ShortNameBoxHint = <html>Selecteer om alleen de korte Treinnaam als Actieve Trei
   Anders wordt ook de Gebruikersnaam van het huidige Baanvak bij de Trein getoond.</html>
 NameInBlockBox = Zet Treinnaam in Vertrekblok
 NameInBlockBoxHint = Selecteer om een nieuwe Treinnaam automatisch als waarde in het Vertrekblok in te vullen.
-RosterInBlockBox = Zet Lok in Vertrekblok
-RosterInBlockBoxHint = Selecteer om de Lok automatisch als waarde in het Vertrekblok in te vullen.
+RosterInBlockBox = Zet Loc in Vertrekblok
+RosterInBlockBoxHint = Selecteer om de Loc automatisch als waarde in het Vertrekblok in te vullen.
 ExtraColorForAllocatedBox = Gebruik eigen kleur voor toegewezen Blokken
 ExtraColorForAllocatedBoxHint = Selecteer om onbezette Blokken in toegewezen Baanvakken in een afwijkende kleur op het Paneel te tonen.
 NameInAllocatedBlockBox = Plaats Treinnaam in toegewezen Blokken
@@ -118,7 +118,7 @@ NumberOfBlocks = Aantal Baanvakken
 AsFarAsPos = Zo ver mogelijk
 ToSafeSections = Tot veilig Baanvak
 UseSpeedProfileLabel = Pas Snelheidsprofiel toe
-UseSpeedProfileHint = Alleen beschikbaar bij een Lok met Snelheidsprofiel
+UseSpeedProfileHint = Alleen beschikbaar bij een Loc met Snelheidsprofiel
 StopBySpeedProfileLabel = Stop volgens Snelheidsprofiel
 StopBySpeedProfileAdjustLabel = Correctie:
 StopBySpeedProfileAdjustHint = Alleen als Stoppen Volgens Profiel 1500 normaal is; hogere waarden stoppen sneller.
@@ -164,8 +164,8 @@ DeleteTrainTitle = Wis Trein-info Bestand
 EnterFileName = Voer een naam in voor het Trein-infobestand, bijv. 'SPThruFreight'.
 TrainTypeBoxLabel = Trein-type:
 TrainTypeBoxHint = Kies het type van deze Trein uit de lijst.
-SpeedFactorLabel = Snelheidscorrectie Lok:
-SpeedFactorHint = Voer een waarde in (10 - 150%) om de standaard snelheid van de Lok in deze Trein te calibreren.
+SpeedFactorLabel = Snelheidscorrectie Loc:
+SpeedFactorHint = Voer een waarde in (10 - 150%) om de standaard snelheid van de Loc in deze Trein te calibreren.
 MaxSpeedLabel = Standaard Maximumsnelheid:
 MaxSpeedHint = Voer een waarde in (10 - 150%) voor de maximumsnelheid van deze Trein.
 RampRateBoxLabel = Overgangstempo:
@@ -173,8 +173,8 @@ RampRateBoxHint = Kies hoe snel snelheidswijzigingen voor deze Trein worden volt
 ResistanceWheels = Alle wagens hebben weerstanden over de wielen
 ResistanceWheelsBoxHint = Kies deze optie als alle wagons in deze Trein Blokbezetmeldingen geven.
 RunInReverse = Rij omgekeerd
-RunInReverseBoxHint = Selecteer als de Lok in omgekeerde richting ("achteruit") over dit Traject moet rijden.
-SoundDecoder = Lok voorzien van sound decoder
+RunInReverseBoxHint = Selecteer als de Loc in omgekeerde richting ("achteruit") over dit Traject moet rijden.
+SoundDecoder = Loc voorzien van sound decoder
 SoundDecoderBoxHint = Selecteer deze optie als de Locdecoder geluidseffecten kan produceren.
 MaxTrainLengthLabel = Max. Treinlengte:
 MaxTrainLengthHint = Vul de maximumlengte in in ({0}) voor deze Trein voor gebruik op dit Traject.
@@ -308,4 +308,4 @@ ms = millisecondes
 minThrottleInterval = Minimum Rijregelaar-interval
 minThrottleIntervalHint = Minimum interval (in millisecondes) tussen Rijregelaar commando's. Stel een waarde in tussen 20 en 1.000 ms.
 fullRampTime = Overgangstijd
-fullRampTimeHint = Tijd (in ms) waarin een Lok met Overgang "{0}" van 0% to 100% versnelt. Stel een waarde in tussen 1.000 ms to 20.000 ms. 
+fullRampTimeHint = Tijd (in ms) waarin een Loc met Overgang "{0}" van 0% to 100% versnelt. Stel een waarde in tussen 1.000 ms to 20.000 ms. 
