--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_nl.properties
@@ -456,7 +456,7 @@ SignalsWarn2 = Waarschuwing - Volgens de opdracht is het ontbrekend van Seinschi
 
 # error messages
 EntryError = Invoerfout
-ErrorEnterLocoID=Invoerfout - Lok-ID vereist.
+ErrorEnterLocoID=Invoerfout - Loc-ID vereist.
 TryAgain = Probeer opnieuw of Annuleer.
 Error1 = Fout - Kan Blok niet maken/bewerken als geen naam is ingevuld.\nVul naam van het Blok in en probeer opnieuw.
 Error2 = Fout - Ingevulde waarde "{0}" is niet toegestaan.\nVul een geheel getal in bereik van 1 tot 10.
