i18n Dispatcher allocation options, add tooltip, NL translation Add new option to Help, update Transit Table and Add New screen shots fix order of auto checkboxes

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle_nl.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle_nl.properties
@@ -541,3 +541,9 @@ ColumnWaterLevel = Waterpeil
 ColumnLocation = Locatie
 ColumnRouting = Routing
 ColumnAddress = Adres
+
+#Used with Transits (in TransitTable > Edit pane)
+TransitSectionIsSafe = Veilig
+TransitSectionIsSafeHint = <html>Als wordt toegewezen als Veilige Baanvakken, dan wordt er pas toegewezen<br>\
+  indien helemaal kan worden toegewezen tot aan het volgende Veilige Baanvak.<br>\
+  Pas als de Trein dat Veilige Baanvak bereikt wordt er weer toegewezen tot het daaropvolgende Veilige Baanvak.</html>
