--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_nl.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_nl.properties
@@ -39,6 +39,7 @@ ActionColName = Acties
 AddEditActions = Bekijk/Bewerk Acties
 DirectionColName = Richting
 AlternateColName = Hoofd/Neven
+SafeColName = Veilig
 TitleViewActions = Bekijk Acties
 TitleAddAction = Voeg Actie toe
 TitleEditAction = Bewerk Actie
