--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_da.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_da.properties
@@ -111,8 +111,7 @@ DestinationBlockBoxLabel = Destination Location of Train
 DestinationBlockBoxHint = Select the Block where the Train will be located when Transit ends.
 AutoRun = Run Train Automatically
 AutoRunBoxHint = Select to request this Train be run automatically by JMRI Dispatcher.
-AllocateAllTheWay = Allocate Train as far as possible
-AllocateAllTheWayBoxHint = <html>Select for Train to be allocated from start to end as far as possible.<br>\
+AllocateAllTheWayHint = <html>Select for Train to be allocated from start to end as far as possible.<br>\
   Leave unchecked to allocate no more than three Sections ahead.</html>
 LoadAtStartup = Load Train at Startup
 LoadAtStartupBoxHint = Select for Train to be loaded when Dispatcher starts. Press Create/Update Train to take effect.
