--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -113,7 +113,7 @@ DestinationBlockBoxHint = Selecteer het Blok waar de Trein zich op het eind van 
 AutoRun = Automatisch Rijden
 AutoRunBoxHint = Selecteer om deze Trein automatisch door JMRI Verkeersleider te laten besturen.
 AllocateMethodLabel = Toewijzingsmethode
-AllocateMethodBoxHint = Aantal Baanvakken dat vooruit wordt toegewezen
+AllocateMethodHint = Aantal Baanvakken dat vooruit wordt toegewezen
 NumberOfBlocks = Aantal Baanvakken
 AsFarAsPos = Zo ver mogelijk
 ToSafeSections = Tot veilig Baanvak
@@ -122,9 +122,10 @@ UseSpeedProfileHint = Alleen beschikbaar bij een Loc met Snelheidsprofiel
 StopBySpeedProfileLabel = Stop volgens Snelheidsprofiel
 StopBySpeedProfileAdjustLabel = Correctie:
 StopBySpeedProfileAdjustHint = Alleen als Stoppen Volgens Profiel 1500 normaal is; hogere waarden stoppen sneller.
-AllocateAllTheWay = Wijs zo ver als mogelijk toe aan Trein
-AllocateAllTheWayBoxHint = <html>Selecteer om zo ver mogelijk van Vertrek tot Eind toe te wijzen aan de Trein.<br>\
-  Anders worden niet meer dan 3 Baanvakken vooruit toegewezen.</html>
+AllocateAllTheWayHint = <html>Wijs zo ver mogelijk van Vertrek tot Eind<br>\
+  toe aan deze Trein.</html>
+AllocateSafeHint = <html>Indien verschillende treinen elkaar via 1 Blok kruisen,<br>\
+  wordt aan deze Trein toegewezen tot eerstvolgende <b>Veilig</b> Baanvak.</html>
 LoadAtStartup = Laad Trein bij Opstarten
 LoadAtStartupBoxHint = Selecteer om de Trein bij het starten van Verkeersleider te activeren. Klik op [Maak aan]/[Werk Trein bij] om instelling door te voeren.
 ResetWhenDoneBoxHint = Selecteer voor doorlopend rijden, zodat na elke ronde automatisch een volgende via het gekozen Traject wordt gestart (in de zelfde richting).
