Fix translation, Javadoc

--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -73,7 +73,7 @@ AutoAllocateBox = Wijs Baanvakken automatisch toe.
 AutoAllocateBoxHint = <html>Selecteer als JMRI automatisch Aangevraagde Baanvakken moet toewijzen aan Actieve Treinen.<br>\
   Deselecteer voor handmatig toewijzen.</html>
 AutoTurnoutsBox = Automatisch Wissels stellen als een Baanvak is toegewezen.
-AutoTurnoutsBoxHint = Selecteer if computer is to automatically set turnouts when a Baanvak is toegewezen. Uncheck for manual setting.
+AutoTurnoutsBoxHint = Selecteer als Dispatcher automatisch de wissels moet stellen als Baanvak wordt toegewezen. Deselecteer voor handmatige bediening.
 CancelButtonHint2 = Annuleer zonder de Opties aan te passen.
 ApplyButtonHint = Pas bovenstaande Opties toe en sluit venster.
 ShortNameBox = Gebruik korte Treinnamen
@@ -125,7 +125,7 @@ StopBySpeedProfileAdjustHint = Alleen als Stoppen Volgens Profiel 1500 normaal i
 AllocateAllTheWayHint = <html>Wijs zo ver mogelijk van Vertrek tot Eind<br>\
   toe aan deze Trein.</html>
 AllocateSafeHint = <html>Indien verschillende treinen elkaar via 1 Blok kruisen,<br>\
-  wordt aan deze Trein toegewezen tot eerstvolgende <b>Veilig</b> Baanvak.</html>
+  wordt aan deze Trein tot eerstvolgend <b>Veilig</b> Baanvak toegewezen.</html>
 LoadAtStartup = Laad Trein bij Opstarten
 LoadAtStartupBoxHint = Selecteer om de Trein bij het starten van Verkeersleider te activeren. Klik op [Maak aan]/[Werk Trein bij] om instelling door te voeren.
 ResetWhenDoneBoxHint = Selecteer voor doorlopend rijden, zodat na elke ronde automatisch een volgende via het gekozen Traject wordt gestart (in de zelfde richting).
@@ -254,8 +254,8 @@ Question4 = Baanvak is BESCHIKBAAR en VRIJ, maar deze Actieve Trein\nheeft zijn 
 Question5 = Het toegewezen Baanvak "{0}" is BEZET.\nToch vrijgeven? Dit kan een botsing veroorzaken.
 ButtonRelease = Geef Baanvak vrij
 
-Message1 = Completeer (of annulleer) het Activeer Nieuwe Trein venster\nvoordat je een Actieve Trein uit dienst neemt.
-Message2 = Completeer (of annulleer) het Activeer Nieuwe Trein venster\nvoordat je de Automatische Herstart van een Actieve Trein annuleert.
+Message1 = Completeer (of annuleer) het Activeer Nieuwe Trein venster\nvoordat je een Actieve Trein uit dienst neemt.
+Message2 = Completeer (of annuleer) het Activeer Nieuwe Trein venster\nvoordat je de Automatische Herstart van een Actieve Trein annuleert.
 
 TrainWarn = Treinnaam uit bestand "{0}" is niet beschikbaar.
 TransitWarn = Trajectnaam uit bestand "{0}" is niet beschikbaar.
