Add Safe example screens, add text from Steve G Fix tooltips en/nl Rename Add New Train button to Create, as we're not adding another but this very train (copied from Add new items) Clean up/move french bundle strings

--- a/java/src/jmri/NamedBeanBundle_ca.properties
+++ b/java/src/jmri/NamedBeanBundle_ca.properties
@@ -201,6 +201,7 @@ ButtonSet=Estableix
 ButtonDone=Fet
 ButtonClose = Tanca
 ButtonStop = Stop
+ButtonCreate = Crea
 
 WarningTitle = Advert\u00e8ncia
 ErrorTitle = Error
