--- a/java/src/jmri/NamedBeanBundle_cs.properties
+++ b/java/src/jmri/NamedBeanBundle_cs.properties
@@ -226,6 +226,7 @@ ButtonYes = Ano
 ButtonSave = Ulo\u017eit
 ButtonClose = Zav\u0159\u00edt
 ButtonStop = Stop
+ButtonCreate = Vytvo\u0159it
 
 TooltipOpenFile = Vybere {0} soubor na disku
 
