--- a/java/src/jmri/NamedBeanBundle_da.properties
+++ b/java/src/jmri/NamedBeanBundle_da.properties
@@ -260,6 +260,7 @@ ButtonWrite     = Skriv
 ButtonPrint     = Print
 ButtonStop 		= Stop
 ButtonStart     = Start
+ButtonCreate    = Opret
 
 Renameddd       = Omd\u00f8b...
 Duplicateddd    = Dupliker...
