--- a/java/src/jmri/NamedBeanBundle_de.properties
+++ b/java/src/jmri/NamedBeanBundle_de.properties
@@ -230,6 +230,7 @@ ButtonYes       = Ja
 ButtonClose     = Schlie\u00dfe
 ButtonOpen      = \u00d6ffne
 ButtonDisable   = Deaktiviere
+ButtonCreate    = Erzeuge
 
 # jmrix and symbolic prog items
 ButtonRead      = Lese
