--- a/java/src/jmri/NamedBeanBundle_es.properties
+++ b/java/src/jmri/NamedBeanBundle_es.properties
@@ -82,6 +82,7 @@ ButtonSet       = Ajustar
 ButtonPrint     = Imprimir
 ButtonRead      = Leer
 ButtonWrite     = Escribir
+ButtonCreate    = Crear
 
 WarningTitle    = Atenci\u00f3n
 ErrorTitle      = Error
