--- a/java/src/jmri/NamedBeanBundle_it.properties
+++ b/java/src/jmri/NamedBeanBundle_it.properties
@@ -206,6 +206,7 @@ ButtonRead      = Leggi
 ButtonWrite     = Scrivi
 ButtonPrint     = Stampa
 ButtonStop      = Stop
+ButtonCreate    = Crea
 
 WarningTitle    = Attenzione
 ErrorTitle      = Errore
