--- a/java/src/jmri/jmrit/Bundle_fr.properties
+++ b/java/src/jmri/jmrit/Bundle_fr.properties
@@ -129,6 +129,8 @@ CantAddNew = Impossible d'ajouter de nouveaux \u00e9l\u00e9ments dans ce panneau
 OpenToAdd = Ouvrir le tableau pour ajouter ce type d'\u00e9l\u00e9ments.
 
 # Common gui strings
+ButtonOKPlus    = OK - Arr\u00eat Avertissements
+ButtonYesPlus = Oui - Arr\u00eat Avertissements
 Show = Montrer
 Included = Inclus
 Include = Inclure
