--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
@@ -124,12 +124,11 @@ RestartSensor = Reinicia en el Sensor
 RestartSensorHint = Seleccioneu el sensor que activar\u00e0 la reassignaci\u00f3 de la Circulaci\u00f3
 RestartTimed = Temps a esperar en minuts
 RestartTimedHint = Entra el temps en minuts que el dispatcher s'esperar\u00e0 abans de reassignar la Circulaci\u00f3
-DelayRestart = Afegeix Retard
+DelayRestart = Afegeix Retard:
 DelayedReStartHint = Afegeix un retard entre els circuits, quan s'executi cont\u00ednuament
 DepartureTime = Hora de Sortida:
 DepartureTimeHrHint = Entra l'Hora de Sortida del rellotge accelerat en hores (00-23).
 DepartureTimeMinHint = Entra l'Hora de Sortida del rellotge accelerat en mimuts (00-59).
-AddNewTrainButton = Afegeix un Tren Nou
 AddNewTrainButtonHint = Prem per activar un Tren nou utilitzant la informaci\u00f3 introdu\u00efda.
 CancelButtonHint = Prem per sortir sense activar un nou tren.
 LoadButton = Carrega Informaci\u00f3 del Tren
