--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_da.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_da.properties
@@ -130,12 +130,11 @@ RestartSensor = Restart on Sensor
 RestartSensorHint = Select the Sensor that will trigger the reallocation of the Transit
 RestartTimed = Time in Minutes to wait
 RestartTimedHint = Enter the amount of time in minutes that Dispatcher will wait until the Transit is reallocated
-DelayRestart = Add Delay
+DelayRestart = Add Delay:
 DelayedReStartHint = Add a delay between the circuits, when running continuously
 DepartureTime = Departure Time:
 DepartureTimeHrHint = Enter fast clock departure time hours (24-hour clock: 00-23).
 DepartureTimeMinHint = Enter fast clock departure time minutes (00-59).
-AddNewTrainButton = Add New Train
 AddNewTrainButtonHint = Click to activate a new Train using the entered information.
 CancelButtonHint = Click to cancel without activating a new Train.
 LoadButton = Load Train Info
