--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
@@ -122,12 +122,11 @@ RestartSensor = Restart su Sensore
 RestartSensorHint = Seleziona il sensore che segnala la riallocazione del transito
 RestartTimed = Tempo di attesa in Minuti
 RestartTimedHint = Batti l'attesa in minuti che user/u00E0 il dispatcher per riallocare il transito
-DelayRestart = Aggiungi Ritardo
+DelayRestart = Aggiungi Ritardo:
 DelayedReStartHint = Aggiungi un ritardo tra i circuiti, quando si viaggia in continuo
 DepartureTime = Orario Partenza:
 DepartureTimeHrHint = Inserisci orario (fast clock) di partenza - ore (00-23).
 DepartureTimeMinHint = Inserisci orario (fast clock) di partenza - minuti (00-59).
-AddNewTrainButton = Aggiungi nuovo treno
 AddNewTrainButtonHint = Click per attivare un nuovo treno utilizzando le informazioni immesse.
 CancelButtonHint = Click per annullare senza attivare un nuovo treno.
 LoadButton = Carica le informazioni del treno
