--- a/java/src/jmri/NamedBeanBundle_nl.properties
+++ b/java/src/jmri/NamedBeanBundle_nl.properties
@@ -255,6 +255,7 @@ ButtonClose             = Sluit
 ButtonOpen              = Open
 ButtonDisable           = Schakel uit
 ButtonStart             = Start
+ButtonCreate            = Voeg toe
 
 # jmrix and symbolic prog items
 ButtonRead              = Lees
