--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
@@ -123,12 +123,11 @@ RestartSensor = Red\u00e9marrer le capteur
 RestartSensorHint = S\u00e9lectionnez le capteur qui va d\u00e9clencher la r\u00e9affectation du transit
 RestartTimed = Temps en minutes \u00e0 attendre
 RestartTimedHint = Entrer la dur\u00e9e en minutes pendant lequel le r\u00e9gulateur devra attendre pour que le transit puisse\u00eatre r\u00e9affect\u00e9
-DelayRestart = Ajouter retard
+DelayRestart = Ajouter retard :
 DelayedReStartHint = Ajouter un retard entre les circuits, lors de l'ex\u00e9cution en continu
-DepartureTime = Heure de d\u00e9part:
+DepartureTime = Heure de d\u00e9part :
 DepartureTimeHrHint = Entrer l'heure de d\u00e9part en horloge rapide (24 heures) (00-23).
 DepartureTimeMinHint = Entrez les minutes de d\u00e9part en horloge rapide (00-59).
-AddNewTrainButton = Ajouter un nouveau train
 AddNewTrainButtonHint = Cliquez pour activer un nouveau train en utilisant les informations saisies.
 CancelButtonHint = Cliquez pour annuler sans activation d'un nouveau train.
 LoadButton = Charger Info Train
