--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -122,10 +122,10 @@ UseSpeedProfileHint = Alleen beschikbaar bij een Loc met Snelheidsprofiel
 StopBySpeedProfileLabel = Stop volgens Snelheidsprofiel
 StopBySpeedProfileAdjustLabel = Correctie:
 StopBySpeedProfileAdjustHint = Alleen als Stoppen Volgens Profiel 1500 normaal is; hogere waarden stoppen sneller.
-AllocateAllTheWayHint = <html>Wijs zo ver mogelijk van Vertrek tot Eind<br>\
+AllocateAllTheWayHint = <html>Wijs <b>zo ver mogelijk</b> van Vertrek tot Eind<br>\
   toe aan deze Trein.</html>
 AllocateSafeHint = <html>Indien verschillende treinen elkaar via 1 Blok kruisen,<br>\
-  wordt aan deze Trein tot eerstvolgend <b>Veilig</b> Baanvak toegewezen.</html>
+  wordt aan deze Trein tot het eerstvolgend <b>Veilig</b> Baanvak toegewezen.</html>
 LoadAtStartup = Laad Trein bij Opstarten
 LoadAtStartupBoxHint = Selecteer om de Trein bij het starten van Verkeersleider te activeren. Klik op [Maak aan]/[Werk Trein bij] om instelling door te voeren.
 ResetWhenDoneBoxHint = Selecteer voor doorlopend rijden, zodat na elke ronde automatisch een volgende via het gekozen Traject wordt gestart (in de zelfde richting).
@@ -143,12 +143,11 @@ RestartSensor = Wacht op Terugmelder
 RestartSensorHint = Selecteer om via de Terugmelder de toewijzing van het Traject te activeren
 RestartTimed = Wachttijd (minuten)
 RestartTimedHint = Vul in hoeveel (model) minuten Verkeersleider wacht voordat het Traject opnieuw wordt toegewezen
-DelayRestart = Extra Wachten
+DelayRestart = Wachttijd:
 DelayedReStartHint = Voegt een extra wachttijd in tussen rondjes Doorlopend Rijden
 DepartureTime = Vertrektijd:
 DepartureTimeHrHint = Vul het vertrekuur in (modelklok 24-uurs notatie 00-23).
 DepartureTimeMinHint = Vul de vertrekminuten in (modelklokminuten 00-59)
-AddNewTrainButton = Voeg Nieuwe Trein toe
 AddNewTrainButtonHint = Klik om een nieuwe Trein aan te maken met de ingevoerde informatie.
 CancelButtonHint = Klik om te annuleren zonder activering van een Trein.
 LoadButton = Laad Trein-info...
