--- a/java/src/jmri/NamedBeanBundle_nl.properties
+++ b/java/src/jmri/NamedBeanBundle_nl.properties
@@ -255,7 +255,7 @@ ButtonClose             = Sluit
 ButtonOpen              = Open
 ButtonDisable           = Schakel uit
 ButtonStart             = Start
-ButtonCreate            = Voeg toe
+ButtonCreate            = Maak aan
 
 # jmrix and symbolic prog items
 ButtonRead              = Lees
