Upgrade Switchboard, flip icons, share bundle key, menu options fixed

--- a/java/src/jmri/NamedBeanBundle_da.properties
+++ b/java/src/jmri/NamedBeanBundle_da.properties
@@ -57,7 +57,9 @@ LightStateTransitioningLower = Overgang til Lavere
 LightStateTransitioningToFullOff = Overgang til Fuld Slukket
 
 TurnoutStateClosed = Ret
+StateClosedShort = R
 TurnoutStateThrown = Afvigende
+StateThrownShort = A
 
 TurnoutOperationOff = Slukket
 TurnoutOperationDefault = Brug Global Standard 
