--- a/java/src/jmri/NamedBeanBundle_de.properties
+++ b/java/src/jmri/NamedBeanBundle_de.properties
@@ -51,7 +51,9 @@ LightStateTransitioningLower = \u00dcbergang Tiefer
 LightStateTransitioningToFullOff = \u00dcbergang zu ganz Aus
 
 TurnoutStateClosed = Geradeaus
+StateClosedShort = G
 TurnoutStateThrown = Abzweigend
+StateThrownShort = A
 
 SensorStateActive = Aktiviert
 SensorStateInactive = Deaktiviert
