--- a/java/src/jmri/NamedBeanBundle_es.properties
+++ b/java/src/jmri/NamedBeanBundle_es.properties
@@ -30,7 +30,9 @@ LightStateTransitioningLower = Cambiando hacia abajo
 LightStateTransitioningToFullOff = Cambiando a apagado
 
 TurnoutStateClosed = Directo
+StateClosedShort        = C
 TurnoutStateThrown = Desviado
+StateThrownShort        = T
 
 SensorStateActive = Activado
 SensorStateInactive = Desactivado
