--- a/java/src/jmri/NamedBeanBundle_fr.properties
+++ b/java/src/jmri/NamedBeanBundle_fr.properties
@@ -55,7 +55,9 @@ LightStateTransitioningLower = Transition vers plus Bas
 LightStateTransitioningToFullOff = Transition vers Compl\u00e8tement \u00c9teint
 
 TurnoutStateClosed = Droit
+StateClosedShort        = C
 TurnoutStateThrown = D\u00e9vi\u00e9
+StateThrownShort        = T
 UseGlobal = Usage {0}
 
 TurnoutOperationOff = Off
