--- a/java/src/jmri/NamedBeanBundle_ja_JP.properties
+++ b/java/src/jmri/NamedBeanBundle_ja_JP.properties
@@ -38,7 +38,9 @@ LightStateTransitioningLower = \u4f4e\u8f1d\u5ea6\u306b\u9077\u79fb
 LightStateTransitioningToFullOff = \u5168\u6d88\u706f\u306b\u9077\u79fb
 
 TurnoutStateClosed = \u5b9a\u4f4d(\u76f4\u9032)
+StateClosedShort    = \u9589 (C)
 TurnoutStateThrown = \u53cd\u4f4d(\u5206\u5c90)
+StateThrownShort    = (T)
 
 SensorStateActive = \u6709\u52b9
 SensorStateInactive = \u7121\u52b9
