--- a/java/src/jmri/NamedBeanBundle_nl.properties
+++ b/java/src/jmri/NamedBeanBundle_nl.properties
@@ -57,7 +57,9 @@ LightStateTransitioningLower = Overgaand zwakker
 LightStateTransitioningToFullOff = Overgaand naar geheel Uit
 
 TurnoutStateClosed      = Rechtstand
+StateClosedShort        = R
 TurnoutStateThrown      = Afbuigend
+StateThrownShort        = A
 
 TurnoutOperationOff     = Uit
 TurnoutOperationDefault = Volgens globale instelling
