--- a/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
@@ -461,7 +461,8 @@ MenuPanelsMnemonic=P
 MenuEditMnemonic=E
 MenuFileMnemonic=F
 MenuToolsMnemonic=T
-SwitchboardBanner=Kliknut\u00edm p\u0159epnete stav
+SwitchboardInteractHint=Kliknut\u00edm p\u0159epnete stav
+SwitchboardNoInteractHint = Follows layout, no control
 SwitchboardHelpTitle=N\u00e1pov\u011bda
 Help1=Panel \u0159adi\u010d\u016f se vypln\u00ed automaticky.\nKlikn\u011bte pro nastaven\u00ed v\u00fdhybky atd.\nPou\u017eijte m\u00edstn\u00ed nab\u00eddku pro nastaven\u00ed podrobnost\u00ed.
 Help2=Za\u0161edl\u00e1 tla\u010d\u00edtka nejsou p\u0159ipojena ke sch\u00e9matu koleji\u0161t\u011b. 
@@ -471,7 +472,7 @@ Buttons=Tla\u010d\u00edtko
 Sliders=Posuvn\u00edk
 Keys=P\u0159ep\u00edna\u010d
 Symbols=Symbol
-SelectRangeTitle=Vyberte rozsah adres pro zobrazen\u00ed
+SelectRangeTitle=Rozsah adres pro zobrazen\u00ed
 ButtonUpdate=Aktualizovat \u0159adi\u010d
 SwitchShape=P\u0159epnout tvar
 BeanTypeLabel=Bean typu
