--- a/java/src/jmri/NamedBeanBundle_it.properties
+++ b/java/src/jmri/NamedBeanBundle_it.properties
@@ -46,7 +46,9 @@ LightStateTransitioningLower = Transizione pi\u00f9 Basso
 LightStateTransitioningToFullOff = Transizione verso OFF
 
 TurnoutStateClosed   = Chiuso
+StateClosedShort     = C
 TurnoutStateThrown   = Girato
+StateThrownShort     = G
 UseGlobal            = Usa {0}
 
 SensorStateActive = Attivo
