--- a/java/src/jmri/jmrit/display/DisplayBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_nl.properties
@@ -35,7 +35,8 @@ MenuEditMnemonic = E
 MenuFileMnemonic = F
 MenuToolsMnemonic = T
 
-SwitchboardBanner = Klik om stand te wisselen 
+SwitchboardInteractHint = Klik om stand te wisselen
+SwitchboardNoInteractHint = Volgt de baan, geen sturing
 SwitchboardHelpTitle = Uitleg 
 Help1 = Schakelpaneel wordt automatisch gevuld.\nKlik om een wissel etc. te bedienen.\nDetails aanpassen via rechtermuisklik.
 Help2 = Gedimde schakelaars zijn niet verbonden.
@@ -45,7 +46,7 @@ Buttons = Knop
 Sliders = Schuifje
 Keys = Keyboard
 Symbols = Symbool
-SelectRangeTitle = Kies adresbereik voor Schakelpaneel 
+SelectRangeTitle = Adresbereik voor Schakelpaneel 
 ButtonUpdate = Schakelpaneel bijwerken
 SwitchShape = Knopvorm
 BeanTypeLabel = Type
