update nl, de profile gui, add tooltips, (re)move shared LayoutScale key

--- a/java/src/jmri/jmrit/Bundle_ca.properties
+++ b/java/src/jmri/jmrit/Bundle_ca.properties
@@ -184,3 +184,7 @@ UpdateToUserName = Vols actualitzar la refer\u00e8ncia a aquest {0}\n per a util
 
 #Xml file validation action title
 XmlFileValidateAction=Valida un fitxer XML
+
+# warrants, dispatcher, speed profiling items
+LabelLayoutScale = Escala de la maqueta:
+ScaleBoxHint = Selecciona l'escala de la maqueta.
