--- a/java/src/jmri/jmrit/Bundle_da.properties
+++ b/java/src/jmri/jmrit/Bundle_da.properties
@@ -220,3 +220,7 @@ ErrorConvertHW = Kan ikke konvertere "{0}" til en gyldig hardwareadresse.
 
 #Xml file validation action title
 XmlFileValidateAction=Valider XML Fil
+
+# warrants, dispatcher, speed profiling items
+LabelLayoutScale = Layout Scale:
+ScaleBoxHint = Select the scale of your model railroad.
