--- a/java/src/jmri/jmrit/Bundle_en_GB.properties
+++ b/java/src/jmri/jmrit/Bundle_en_GB.properties
@@ -15,3 +15,6 @@ LightGray           = Light Grey
 
 #Xml file validation action title
 XmlFileValidateAction = Validate XML File
+
+# warrants, dispatcher, speed profiling items
+ScaleBoxHint = Select the scale of your model railway.
