--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -250,3 +250,7 @@ SendOneLabel            = Verstuur 1 packet:
 SendSequenceLabel       = Verstuur reeks packets:
 Packet                  = Packet
 WaitMsec                = wacht (ms)
+
+# warrants, dispatcher, speed profiling items
+LabelLayoutScale = Schaal van de Baan:
+ScaleBoxHint = Stel de schaal van de modelbaan in.
