--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
@@ -242,9 +242,7 @@ FastClockWarn = Com a m\u00ednim un Tren Actiu s'est\u00e0 esperant a l'horari \
 FastClockWarn2 = Com a m\u00ednim un Tren Actiu necessita el \nrellotge iniciat per reiniciar, per\u00f2 aquest est\u00e0 parat. \nVols iniciar el rellotge accelerat?
 ButtonYesStart = S\u00ed, Inicia'l
 
-LayoutScale = Escala de la maqueta
-ScaleBoxHint = Selecciona l'escala de la maqueata.
-
+# error messages
 Error1 = El nom "{0}" no coincideix amb cap nom de Circulacions.\nSiusplau corregeig o crea'n una.
 Error2 = La Circulaci\u00f3 "{0}" l'usa un altre Tren Actiu.\nSiusplau espera a que estigui lliure o usa un duplicat.
 Error3 = Falta l'ID de Tren de la sol\u00b7licitud de crear un Tren Actiu.\nSiusplau afegeix un ID de Tren.
