--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
@@ -240,9 +240,7 @@ FastClockWarn = Au moins un Train Actif attend\nl'horloge rapide, mais elle ne f
 FastClockWarn2 = Au moins un Train Actif a besoin de \nl'horloge rapide pour repartir, mais elle ne fonctionne pas. \nVoulez-vous d\u00e9marrer l'horloge rapide?
 ButtonYesStart = Oui, d\u00e9marrez-la
 
-LayoutScale = \u00c9chelle du R\u00e9seau
-ScaleBoxHint = S\u00e9lectionnez l'\u00e9chelle de votre mod\u00e8le de chemin de fer.
-
+# messages d'erreur
 Error1 = Le nom "{0}" ne correspond pas \u00e0 un Transit existants\nVeuillez corriger ou cr\u00e9er, au besoin, et essayez \u00e0 nouveau.
 Error2 = Le Transit "{0}" est utilis\u00e9 avec un autre train actif.\nVeuillez patienter jusqu'\u00e0 ce qu'il soit en VEILLE, ou utiliser un doublon.
 Error3 = ID Train manque dans la demande de cr\u00e9ation d'un train actif.\nVeuillez ajouter une ID train et essayez de nouveau.
