--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -262,9 +262,7 @@ FastClockWarn = Ten minste 1 Actieve Trein wacht op de\nmodelklok, maar klok loo
 FastClockWarn2 = Ten minste 1 Actieve Trein heeft de\nmodelklok nodig voor zijn herstart, maar klok loopt niet.\nWil je de modelklok starten?
 ButtonYesStart = Start JMRI Modelklok
 
-LayoutScale = Schaal van de Baan
-ScaleBoxHint = Stel de schaal van de modelbaan in.
-
+# error messages
 Error1 = De naam "{0}" komt niet overeen met een bestaand Traject.\nPas keuze aan of voeg dit Traject eerst toe.
 Error2 = Traject "{0}" is in gebruik voor een andere Actieve Trein.\nWacht tot het VRIJ is of gebruik aan Duplicaat-Traject.
 Error3 = Train ID ontbreekt op aanvraag voor nieuwe Actieve Trein.\nVul Trein ID in en probeer opnieuw.
