--- a/java/src/jmri/jmrit/Bundle_fr.properties
+++ b/java/src/jmri/jmrit/Bundle_fr.properties
@@ -158,3 +158,7 @@ SigSys          = Syst\u00e8me Signal
 # interface colors
 # these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
 Color           = Couleur
+
+# warrants, dispatcher, speed profiling items
+LabelLayoutScale = \u00c9chelle du R\u00e9seau :
+ScaleBoxHint = S\u00e9lectionnez l'\u00e9chelle de votre mod\u00e8le de chemin de fer.
