--- a/java/src/jmri/jmrit/Bundle_it.properties
+++ b/java/src/jmri/jmrit/Bundle_it.properties
@@ -185,3 +185,7 @@ UpdateToUserName = Vuoi aggiornare i riferimenti a questa {0} \nper utilizzare i
 
 #Xml file validation action title
 XmlFileValidateAction=Convalida file XML
+
+# warrants, dispatcher, speed profiling items
+LabelLayoutScale = Scala Plastico:
+ScaleBoxHint = Seleziona la scala della tua ferrovia modello.
