--- a/java/src/jmri/jmrit/Bundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/Bundle_ja_JP.properties
@@ -127,3 +127,7 @@ WarningUserName = \u30e6\u30fc\u30b6\u30fc\u540d " {0} " \u306f\u65e2\u306b\u4f7
 
 #Xml file validation action title
 XmlFileValidateAction=Validate XML File
+
+# warrants, dispatcher, speed profiling items
+LabelLayoutScale = \u30ec\u30a4\u30a2\u30a6\u30c8\u30b9\u30b1\u30fc\u30eb:
+ScaleBoxHint = \u4f7f\u7528\u3059\u308b\u9244\u9053\u6a21\u578b\u306e\u7e2e\u5c3a\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002.
