--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
@@ -238,9 +238,7 @@ TransitWarn = Nome Transito dal file - "{0}" non \u00e8 disponibile per la selez
 FastClockWarn = Almeno un treno attivo \u00e8 in attesa \n dell'orario, ma FAST CLOCK non \u00e8 in esecuzione. \n Vuoi avviare l'orologio accellerato?
 ButtonYesStart = Si, Avvialo
 
-LayoutScale = Scala Plastico
-ScaleBoxHint = Seleziona la scala della tua ferrovia modello.
-
+# error messages
 Error1 = Il nome "{0}" non corrisponde a un transito esistente. \n Si prega di correggere o creare, come richiesto, e riprovare.
 Error2 = Il transito "{0}" \u00e8 in uso con un altro treno attivo. \n Si prega di attendere fino a che non sar\u00e0 disponibile, o utilizzare un duplicato.
 Error3 = TrainID manca dalla richiesta di creare un treno attivo. \n Si prega di aggiungere un TrainID e riprovare.
