--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ja_JP.properties
@@ -132,10 +132,7 @@ Message1 = Please complete or cancel Activate New Train before Terminating an Ac
 TrainWarn = Train name from file - "{0}" is not available for selection.
 TransitWarn = Transit name from file - "{0}" is not available for selection.
 
-LayoutScale = \u30ec\u30a4\u30a2\u30a6\u30c8\u30b9\u30b1\u30fc\u30eb
-ScaleBoxHint = \u4f7f\u7528\u3059\u308b\u9244\u9053\u6a21\u578b\u306e\u7e2e\u5c3a\u3092\u9078\u629e\u3057\u3066\u4e0b\u3055\u3044\u3002.
-
-#ErrorTitle = \u30a8\u30e9\u30fc
+# error messages
 Error1 = "{0}"\u3068\u3044\u3046\u540d\u524d\u306f\u65e2\u5b58\u306e\u904b\u884c\u30c7\u30fc\u30bf\u306b\u306f\u3042\u308a\u307e\u305b\u3093\u3002\n\u540d\u524d\u3092\u518d\u5165\u529b\u3059\u308b\u304b\u3001\u65b0\u898f\u306b\u4f5c\u6210\u3057\u3066\u4e0b\u3055\u3044\u3002
 Error2 = Transit "{0}" is in use with another Active Train.\nPlease wait until it''s IDLE, or use a duplicate.
 Error3 = TrainID is missing from request to create an Active Train.\nPlease add trainID and try again.
