add tooltips to profiling pane, explain test, inset table instruction from edge, add table screen shot in help

--- a/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle_da.properties
+++ b/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle_da.properties
@@ -9,7 +9,7 @@ ButtonProfile = Profil
 ButtonTest    = Test
 ButtonClear   = Ryd Profil
 ButtonUpdate  = Opdater Profil
-#ButtonView    = Vis
+TitleView    = Vis
 
 LabelLengthOfBlock = L\u00e6ngde P\u00e5 Blok (mm)
 LabelSensorDelay = Sensor Forsinkelse Justering (milli sek)
@@ -21,7 +21,7 @@ LabelTestStep      = Test Speed Trin
 LabelStartStep     = Profil Start Trin
 StartStepToolTip   = Default value = 1
 LabelFinishStep    = Profil Slut Trin
-FinishStepToolTip  = Default = MAXstep
+FinishStepToolTip  = Default = MAXstep as set in the decoder
 LabelStepIncr      = For\u00f8g Trin Med
 StepIncrToolTip    = Default value = 1
 
