--- a/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle_de.properties
+++ b/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle_de.properties
@@ -13,7 +13,6 @@ TitleTestProfile = \u00dcberpr\u00fcfen
 ButtonClear = Leere Profile
 ButtonUpdate = Aktualisiere Profile
 TitleView = Vorschau
-#ButtonView = Zeige
 ButtonViewCurrent = Aktuell
 ButtonViewNew = Neu
 ButtonViewMerged = Kombiniert
@@ -37,7 +36,7 @@ LabelTestStepRev = R\u00fcckw\u00e4rts
 LabelStartStep  = Profilanfangsstufe
 StartStepToolTip = Standardwert = 1
 LabelFinishStep = Profilendestufe
-FinishStepToolTip = Standardwert = MAXstep
+FinishStepToolTip = Standardwert = MAXstep f\u00fcr diesen Decoder
 LabelStepIncr   = Stufengr\u00f6\u00dfe
 StepIncrToolTip = Standardwert = 1
 
