--- a/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle_fr.properties
+++ b/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle_fr.properties
@@ -10,7 +10,7 @@ ButtonProfile = Profil
 ButtonTest = Test
 ButtonClear = Effacer le Profil
 ButtonUpdate = Actualiser le Profil
-#ButtonView = Vue
+TitleView = Vue
 
 LabelLengthOfBlock = Longueur du Canton (mm)
 LabelStartSensor = Capteur de D\u00e9part
