--- a/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle_nl.properties
+++ b/java/src/jmri/jmrit/roster/swing/speedprofile/SpeedProfileBundle_nl.properties
@@ -11,8 +11,7 @@ ButtonTest = Test
 TitleTestProfile = Test
 ButtonClear = Maak Profiel leeg
 ButtonUpdate = Werk Profiel bij
-TitleView = Beeld
-#ButtonView = Bekijk
+TitleView = Toon
 ButtonViewCurrent = Huidige
 ButtonViewNew = Nieuw
 ButtonViewMerged = Gecombineerd
@@ -30,12 +29,15 @@ LabelBlockSensor = Blokterugmelder
 LabelFinishSensor = Eindterugmelder
 LabelSelectRoster = Loc
 LabelTestStep   = Snelheidsstap
+StepTestToolTip = Vul een geheel getal in als Stap voor de test (van 1 t/m maximum waarde in de decoder)
 LabelTestStepFwd = Vooruit
 LabelTestStepRev = Achteruit
+ForwardTestToolTip = Hier verschijnt de in de test gemeten snelheid Vooruit (niet te bewerken)
+ReverseTestToolTip = Hier verschijnt de in de test gemeten snelheid Achteruit (niet te bewerken)
 LabelStartStep = Profiel Beginstap
 StartStepToolTip   = Standaardwaarde = 1
 LabelFinishStep = Profiel Laatste stap
-FinishStepToolTip  = Standaardwaarde = MAXstep
+FinishStepToolTip  = Standaardwaarde = MAXstep van de decoder
 LabelStepIncr   = Stappen ophogen met
 StepIncrToolTip    = Standaardwaarde = 1
 
