fix grapevine node config frame and table NPEs (tc param, Bundle), Javadoc

--- a/java/src/jmri/jmrix/JmrixBundle_de.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_de.properties
@@ -192,7 +192,7 @@ SendXCommandTitle       = Sende {0}-Befehl
 EnterASCIIToolTip       = Befehl eingeben als ASCII Buchstaben (hex noch nicht unterst\u00fctzt)
 Timeout                 = Zeitfehler
 
-# cmri/rps/maple shared items
+# cmri/rps/maple/acela/grapevine shared items
 ConfigNodesTitle        = Knotenkonfigurator
 LabelPoll               = Abfragen
 PollToolTip             = Sende Abfrageversuch
@@ -206,6 +206,12 @@ ShowOutputTip           = W\u00e4hle diese Option zur Anzeige der Ausgangsbits
 HeadingBit              = Bit
 InputBitsAnd            = Eingangsbits und
 OutputBits              = Ausgangsbits
+
+ButtonAdd               = Knoten hinzuf\u00fcgen
+ButtonEdit              = Knoten bearbeiten
+ButtonDelete            = Knoten l\u00f6schen
+ButtonInit              = Knoten initialisieren
+ButtonUpdate            = Knoten aktualisieren
 
 ConnectionPrefixDialog  = Verbindungsvorlauf {0} wirdt schon genutzt
 ConnectionNameDialog    = Verbindungsname {0} wirdt schon genutzt
