--- a/java/src/jmri/jmrix/JmrixBundle_it.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_it.properties
@@ -100,7 +100,7 @@ MenuItemSendCommand     = Invio Comandi
 # Slot Monitor strings
 AddressCol              = Indirizzo
 
-# cmri/rps/maple shared items
+# cmri/rps/maple/acela/grapevine shared items
 ConfigNodesTitle        = Configura Nodi
 NodePanelName           = Nodo
 NodeBoxLabel            = Nodo:
@@ -111,6 +111,12 @@ ShowOutputButton        = vedi Bits Uscite
 ShowOutputTip           = Seleziona questo pulsante per Visualizzare Assegnazioni di bit di Uscita
 InputBitsAnd            = bits Ingresso e
 OutputBits              = bits Uscita
+
+ButtonAdd               = Aggiungi Nodo
+ButtonEdit              = Modifica Nodo
+ButtonDelete            = Cancella Nodo
+ButtonInit              = Inizializza Nodo
+ButtonUpdate            = Aggiorna Node
 
 #Error message displayed on start if internal connection has all defaults.
 ManagerDefaultSelector.AllInternal=All defaults are assigned to an internal connection.
