--- a/java/src/jmri/jmrix/JmrixBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_ja_JP.properties
@@ -58,9 +58,14 @@ ErrorSubException=<html>&nbsp;&nbsp;&nbsp;&nbsp;{0}</html>
 # Packet frame items
 MenuItemSendCommand = \u30b3\u30de\u30f3\u30c9\u9001\u4fe1
 
-# cmri/rps/maple shared items
+# cmri/rps/maple/acela/grapevine shared items
 ConfigNodesTitle    = \u30ce\u30fc\u30c9\u8abf\u6574
 LabelPoll           = \u5de1\u8996
+ButtonAdd           = \u30ce\u30fc\u30c9\u8ffd\u52a0
+ButtonEdit          = \u30ce\u30fc\u30c9\u7de8\u96c6
+ButtonDelete        = \u30ce\u30fc\u30c9\u524a\u9664
+ButtonInit          = \u30ce\u30fc\u30c9\u521d\u671f\u5316
+ButtonUpdate        = Update Node
 
 #Error message displayed on start if internal connection has all defaults.
 ManagerDefaultSelector.AllInternal=All defaults are assigned to an internal connection.
