--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -216,7 +216,7 @@ SentTitle               = Verstuurd
 ReceivedTitle           = Ontvangen
 Timeout                 = Timeout
 
-# cmri/rps/maple shared items
+# cmri/rps/maple/acela/grapevine shared items
 LabelPoll               = Verzoek
 PollToolTip             = Verstuur verzoek
 NodePanelName           = Node
@@ -229,6 +229,11 @@ ShowOutputTip           = Selecteer om in de lijst alle output bit toewijzingen 
 HeadingBit              = Bit
 InputBitsAnd            = input bits en
 OutputBits              = output bits
+ButtonAdd               = Voeg Node toe
+ButtonEdit              = Bewerk Node
+ButtonDelete            = Verwijder Node
+ButtonInit              = Initiliseer Node
+ButtonUpdate            = Werk Node bij
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Vraag Systeem-info op
