--- a/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_es.properties
+++ b/java/src/jmri/jmrix/maple/nodeconfig/NodeConfigBundle_es.properties
@@ -20,14 +20,14 @@ TipNodeType         = Elija el tipo de nodo Maple.
 TipDelay            = Retardo entre bytes recibidos (unidades de 10 microsegundos), normalmente 0.
 TipPulseWidth       = Anchura del pulso para control de desv\u00ccos pulsado (permitido de 100 a 10000).
 TipCardSize         = Elija n\u02d9mero de bits por tarjeta.
-TipAddButton        = A\u00d2adir un nodo nuevo
+TipAddButton        = A\u00f1adir un nodo nuevo
 TipEditButton       = Editar un nodo existente
 TipDeleteButton     = Borrar un nodo existente
 TipDoneButton       = Pulse cuando termine de configurar nodos
 TipUpdateButton     = Cambiar informaci\u00f3n de nodo
 TipCancelButton     = Parar de editar sin cambiar el nodo
 
-ButtonAdd           = A\u00d2adir nodo
+ButtonAdd           = A\u00f1adir nodo
 ButtonEdit          = Editar nodo
 ButtonDelete        = Borrar nodo
 ButtonDone          = Hecho
@@ -35,7 +35,7 @@ ButtonUpdate        = Actualizar nodo
 ButtonCancel        = Cancelar
 
 # The longest of the next three lines determines the window width.
-NotesStd1   = Para a\u00f1adir un nodo, introduzca la informaci\u00dbn y pulse "A\u00f1adir nodo".
+NotesStd1   = Para a\u00f1adir un nodo, introduzca la informaci\u00f3n y pulse "A\u00f1adir nodo".
 NotesStd2   = Para editar un nodo, introduzca la direcci\u00f3n y pulse "Editar nodo".
 NotesStd3   = Para eliminar un nodo, introduzca la direcci\u00f3n y pulse "Borrar nodo".
 # These three lines must be shorter than the longest line above.
