--- a/java/src/jmri/jmrix/JmrixBundle_da.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_da.properties
@@ -215,7 +215,7 @@ TooltipClearCounters    = Clear the sent and received packet counters
 SentTitle               = Sent
 ReceivedTitle           = Received
 
-# cmri/rps/maple shared items
+# cmri/rps/maple/grapevine shared items
 LabelPoll               = Poll
 PollToolTip             = Send poll request
 NodePanelName           = Node
@@ -228,6 +228,11 @@ ShowOutputTip           = Select this button to show output bit assignments
 HeadingBit              = Bit
 InputBitsAnd            = input bits and
 OutputBits              = output bits
+ButtonAdd               = Add Node
+ButtonEdit              = Edit Node
+ButtonDelete            = Delete Node
+ButtonInit              = Init Node
+ButtonUpdate            = Update Node
 
 # Lenz XpressNet/Roco Z21 shared config items
 GetSystemInfoButtonLabel = Get System Information
