--- a/java/src/jmri/jmrix/grapevine/GrapevineBundle_da.properties
+++ b/java/src/jmri/jmrix/grapevine/GrapevineBundle_da.properties
@@ -1,10 +1,8 @@
-# GrapevineBundle.properties
+# GrapevineBundle_da.properties
 #
-#
-#
-# Default properties for the jmri.jmrix.grapevine menu
+# Danish properties for the jmri.jmrix.grapevine menu
 
-MenuSystem    = Grapevine
+MenuSystem                  = Grapevine
 
 MenuItemCommandMonitor      = Communications Monitor
 MenuItemSendCommand         = Send Command
