SCWarrants changed so that allocation and deallocation of blocks is done for the entire route at once. By this change, two warrants using the same block(s) as part of their route will not run the trains simultaneously. It is more robust - probably also more prototypical, but give  little less liveliness on the layout. In addition, a speed factor has been introduced for SCWarrants, so that the maximum speed can be determined per warrant.

--- a/java/src/jmri/jmrit/logix/WarrantBundle_da.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle_da.properties
@@ -336,7 +336,9 @@ ThrottleLost    = Throttle control for address, {0}, has been lost.  Please stop
 NoBlock         = No Block
 Forward         = K\u00f8r forl\u00e6ns
 TTP             = TTP
-TTPtoolTip      = Tid (in millisekunder), som toget skal k\u00f8re ved lav hastighed i slutblokken for at standse ved perron.
+TTPtoolTip      = Tid (i millisekunder), som toget skal k\u00f8re ved lav hastighed i slutblokken for at standse ved perron.
+SF              = Fart %
+sfToolTip       = Procentdel (mellem 10 og 100) til hvilken farten reduceres. 100% betyder ingen fartreduktion.
 SelectType      = V\u00e6lg type
 SetSCParameters = Parametre
 SmallLayoutTrainAutomater = Hurtig
